--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,10 @@ beautifulsoup4==4.9.3
 Django==3.1.4
 django-bootstrap4==2.3.1
 django-countries==7.0
+django-filter==2.4.0
 django-phonenumber-field==5.0.0
+djangorestframework==3.12.2
+Markdown==3.3.3
 phonenumbers==8.12.14
 Pillow==8.0.1
 pytz==2020.4
